# gtk3-joytester

./: .gitignore  README.md  meson.build
src/: .appwindow.c.swp  .joy_linux.h.swp  .joyevent_widget.c.swp  appwindow.c  appwindow.h  axissliderwidget.c  axissliderwidget.h  joy_linux.c  joy_linux.h  joyevent_widget.c  joyevent_widget.h  joylist_widget.c  joylist_widget.h  main.c
